fix homepage bg shifting

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,6 @@ body {
 }
 
 body.homepage {
-  background: #f00;
   color: #000;
 }
 
